--- a/CarRentalManagement/Client/Pages/Makes/Index.razor
+++ b/CarRentalManagement/Client/Pages/Makes/Index.razor
@@ -1,9 +1,16 @@
 ﻿@page "/makes"
 @inject HttpClient _client
 @inject IJSRuntime js
-@attribute [Authorize] 
+@attribute [Authorize]
 
 <h3 class="card-title">Car Makes</h3>
+
+<a href="/makes/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Make
+</a>
+<br />
+<br />
 
 @if (Makes == null)
 {
@@ -57,7 +64,7 @@ else
         {
             await _client.DeleteAsync($"{Endpoints.MakesEndpoint}/{makeId}");
             await OnInitializedAsync();
-        }   
+        }
     }
 
 }
