--- a/CarRentalManagement/Client/Pages/Colours/Index.razor
+++ b/CarRentalManagement/Client/Pages/Colours/Index.razor
@@ -5,6 +5,13 @@
 
 <h3 class="card-title">Car Colours</h3>
 
+<a href="/colours/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Make
+</a>
+<br />
+<br />
+
 @if (Colours == null)
 {
     <div class="alert alert-info">Loading Colours...</div>
