--- a/CarRentalManagement/Client/Pages/Customers/Index.razor
+++ b/CarRentalManagement/Client/Pages/Customers/Index.razor
@@ -5,6 +5,13 @@
 
 <h3 class="card-title">Car Customers</h3>
 
+<a href="/customers/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Customer
+</a>
+<br />
+<br />
+
 @if (Customers == null)
 {
     <div class="alert alert-info">Loading Customers...</div>
@@ -14,6 +21,8 @@ else
     <table class="table table-responsive">
         <thead>
             <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
                 <th>Driving License</th>
                 <th>Contact Number</th>
                 <th>Email Address</th>
