--- a/CarRentalManagement/Client/Pages/Models/Index.razor
+++ b/CarRentalManagement/Client/Pages/Models/Index.razor
@@ -5,6 +5,13 @@
 
 <h3 class="card-title">Car Models</h3>
 
+<a href="/models/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Make
+</a>
+<br />
+<br />
+
 @if (Models == null)
 {
     <div class="alert alert-info">Loading Models...</div>
