--- a/CarRentalManagement/Client/Pages/Vehicles/Index.razor
+++ b/CarRentalManagement/Client/Pages/Vehicles/Index.razor
@@ -5,6 +5,13 @@
 
 <h3 class="card-title">Car Vehicles</h3>
 
+<a href="/vehicles/create" class="btn btn-secondary">
+    <span class="oi oi-plus"></span>
+    Create New Vehicle
+</a>
+<br />
+<br />
+
 @if (Vehicles == null)
 {
     <div class="alert alert-info">Loading Vehicles...</div>
@@ -30,15 +37,15 @@ else
                     <td>@vehicle.Year</td>
                     <td>@vehicle.LicensePlateNumber </td>
                     <td>
-                    <a href="/vehicles/view/@vehicle.Id" class="btn btn-primary">
-                        <span class="oi oi-book"></span>
-                    </a>
-                    <a href="/vehicles/edit/@vehicle.Id" class="btn btn-warning">
-                        <span class="oi oi-pencil"></span>
-                    </a>
-                    <button class="btn btn-danger" @onclick="@(()=>Delete(vehicle.Id))">
-                        <span class="oi oi-delete"></span>
-                    </button>
+                        <a href="/vehicles/view/@vehicle.Id" class="btn btn-primary">
+                            <span class="oi oi-book"></span>
+                        </a>
+                        <a href="/vehicles/edit/@vehicle.Id" class="btn btn-warning">
+                            <span class="oi oi-pencil"></span>
+                        </a>
+                        <button class="btn btn-danger" @onclick="@(()=>Delete(vehicle.Id))">
+                            <span class="oi oi-delete"></span>
+                        </button>
                     </td>
                 </tr>
             }
